cmake_minimum_required(VERSION 3.5)

project(unordered_map)


add_executable(map_ll_ll map_ll_ll.cpp)
add_executable(map_ll_pair map_ll_pair.cpp)
add_executable(map_ll_array map_ll_array.cpp)

add_executable(map_person_int_lambda map_person_int_lambda.cpp)
add_executable(map_person_int_function_struct map_person_int_function_struct.cpp)
